feat: raw 정규화, validation/DLQ, 폴더구조 리팩토링